correct spacing around signin login buttons after parent div was removed

--- a/app/assets/stylesheets/_user.scss
+++ b/app/assets/stylesheets/_user.scss
@@ -151,8 +151,8 @@ i#main-drop-menu-icon {
 //
 .login-signup-btns {
   position: relative;
-  top: 38px;
-  left: -23%;
+  top: 130px;
+  // left: -23%;
   width: 100%;
   text-align: center
 }
